--- a/_includes/sidebar-profile.html
+++ b/_includes/sidebar-profile.html
@@ -4,7 +4,7 @@
     <h3>Ryoko KINO</h3>
     <p>
       <a href="https://www.jsps.go.jp/english/e-pd/"  target="_blank" rel="noopener noreferrer">JSPS Postdoctoral Fellow (PD)</a><br>
-      <a href="https://www.riken.jp/en/research/labs/ecl/mes_riken_ecl/index.html"  target="_blank" rel="noopener noreferrer">Meson ECL Research Team</a><br>
+      <a href="https://www.riken.jp/en/research/labs/ecl/mes_riken_ecl/index.html"  target="_blank" rel="noopener noreferrer">Meson RIKEN ECL Research Team</a><br>
       <a href="https://www.nishina.riken.jp/index_e.html"  target="_blank" rel="noopener noreferrer">RIKEN Nishina Center for Accelerator-Based Science</a>
       (from Oct. 2025)<br>
       Hypernuclear/kaonic-nuclei experiments
@@ -20,7 +20,7 @@
     <h3>木野 量子（Ryoko KINO）</h3>
     <p>
       <a href="https://www.jsps.go.jp/j-pd/"  target="_blank" rel="noopener noreferrer">日本学術振興会 特別研究員PD</a><br>
-      <a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/"  target="_blank" rel="noopener noreferrer">中間子ECL研究チーム</a><br>     
+      <a href="https://www.riken.jp/research/labs/ecl/mes_riken_ecl/"  target="_blank" rel="noopener noreferrer">中間子理研ECL研究チーム</a><br>     
       <a href="https://www.nishina.riken.jp/index.html"  target="_blank" rel="noopener noreferrer">理化学研究所 仁科加速器科学研究センター</a>
       （2025年10月〜）<br>
       ハイパー核・K中間子原子核 実験
