--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,15 +8,15 @@
     <nav>
       {% if page.lang == 'en' %}
         <a href="/en/cv/">CV</a>
+        <a href="/en/research/">Research</a>
         <a href="/en/publications/">Publications</a>
         <a href="/en/talk/">Talks</a>
-        <a href="/en/meeting/">Meeting</a>
         <span class="lang"><b>EN</b> / <a href="/">日本語</a></span>
       {% else %}
-        <a href="/cv/">CV</a>
-        <a href="/publications/">Publications</a>
-        <a href="/talk/">Talks</a>
-        <a href="/meeting/">Meeting</a>
+        <a href="/cv/">履歴書</a>
+        <a href="/research/">研究</a>
+        <a href="/publications/">論文</a>
+        <a href="/talk/">発表リスト</a>
         <span class="lang"><a href="/en/">EN</a> / <b>日本語</b></span>
       {% endif %}
     </nav>
