--- a/_includes/sidebar-profile.html
+++ b/_includes/sidebar-profile.html
@@ -11,9 +11,9 @@
     </p>
     <p class="mono">ryoko.kino [at] riken.jp</p>
     <ul class="profile-links">
-      <li><a href="/en/cv/">CV</a></li>
-      <li><a href="/en/publications/">Publications</a></li>
-      <li><a href="/en/talk/">Talks</a></li>
+      <li><a href="https://www.instagram.com/ryk_0710/">Instagram</a></li>
+      <li><a href="https://x.com/hkkr710">X (Twitter)</a></li>
+      <li><a href="https://www.facebook.com/ryoko.kino0710/">Facebook</a></li>
       <li><a href="https://github.com/Ryoko0710" target="_blank" rel="noopener">GitHub</a></li>
     </ul>
   {% else %}
@@ -27,9 +27,9 @@
     </p>
     <p class="mono">ryoko.kino [at] riken.jp</p>
     <ul class="profile-links">
-      <li><a href="/cv/">CV</a></li>
-      <li><a href="/publications/">Publications</a></li>
-      <li><a href="/talk/">Talks</a></li>
+      <li><a href="https://www.instagram.com/ryk_0710/">Instagram</a></li>
+      <li><a href="https://x.com/hkkr710">X (Twitter)</a></li>
+      <li><a href="https://www.facebook.com/ryoko.kino0710/">Facebook</a></li>
       <li><a href="https://github.com/Ryoko0710" target="_blank" rel="noopener">GitHub</a></li>
     </ul>
   {% endif %}
